@@ -20,8 +20,6 @@ package org.apache.zookeeper.test;
 
 import java.io.File;
 import java.io.IOException;
-import java.lang.management.ManagementFactory;
-import java.lang.management.OperatingSystemMXBean;
 import java.net.InetSocketAddress;
 import java.util.HashMap;
 import java.util.LinkedHashSet;
@@ -35,10 +33,10 @@ import org.apache.zookeeper.server.quorum.Election;
 import org.apache.zookeeper.server.quorum.QuorumPeer;
 import org.apache.zookeeper.server.quorum.QuorumPeer.LearnerType;
 import org.apache.zookeeper.server.quorum.QuorumPeer.QuorumServer;
+import org.apache.zookeeper.server.util.OSMXBean;
 import org.junit.Assert;
 import org.junit.Test;
 
-import com.sun.management.UnixOperatingSystemMXBean;
 
 public class QuorumBase extends ClientBase {
     private static final Logger LOG = LoggerFactory.getLogger(QuorumBase.class);
@@ -102,13 +100,10 @@ public class QuorumBase extends ClientBase {
 
         startServers(withObservers);
 
-        OperatingSystemMXBean osMbean =
-            ManagementFactory.getOperatingSystemMXBean();
-        if (osMbean != null && osMbean instanceof UnixOperatingSystemMXBean) {
-            UnixOperatingSystemMXBean unixos =
-                (UnixOperatingSystemMXBean)osMbean;
+        OSMXBean osMbean = new OSMXBean();
+        if (osMbean.getUnix() == true) {
             LOG.info("Initial fdcount is: "
-                    + unixos.getOpenFileDescriptorCount());
+                    + osMbean.getOpenFileDescriptorCount());
         }
 
         LOG.info("Setup finished");
@@ -281,13 +276,10 @@ public class QuorumBase extends ClientBase {
     public void tearDown() throws Exception {
         LOG.info("TearDown started");
         
-        OperatingSystemMXBean osMbean =
-            ManagementFactory.getOperatingSystemMXBean();
-        if (osMbean != null && osMbean instanceof UnixOperatingSystemMXBean) {
-            UnixOperatingSystemMXBean unixos =
-                (UnixOperatingSystemMXBean)osMbean;
+        OSMXBean osMbean = new OSMXBean();
+        if (osMbean.getUnix() == true) {
             LOG.info("fdcount after test is: "
-                    + unixos.getOpenFileDescriptorCount());
+                    + osMbean.getOpenFileDescriptorCount());
         }
 
         shutdownServers();
