@@ -90,8 +90,13 @@ BUGFIXES:
 
   ZOOKEEPER-1624. PrepRequestProcessor abort multi-operation incorrectly. (thawan via camille)
 
+IMPROVEMENTS:
+
   ZOOKEEPER-1610. Some classes are using == or != to compare
   Long/String objects instead of .equals() (Edward Ribeiro via phunt)
+
+  ZOOKEEPER-1564. Allow JUnit test build with IBM Java
+    (Paulo Ricardo Paz Vital via phunt)
 
   ZOOKEEPER-1799. SaslAuthFailDesignatedClientTest.testAuth fails
   frequently on SUSE (Jeffrey Zhong via phunt)
